syntax = "proto3";
package abag.quasarnode.orion;

option go_package = "github.com/abag/quasarnode/x/orion/types";
import "gogoproto/gogo.proto"; 
import "cosmos/base/v1beta1/coin.proto"; 
import "google/protobuf/duration.proto";
import "google/protobuf/timestamp.proto";

//LpEpochPair indicates the epoch day on which lpId was created.
message LpEpochPair {
  uint64 lpId = 1;
  uint64 epochDay = 2;
}

// GaugeLockInfo object is used to save the lockup period, associated approx apy
// and state whether it is active, and start time of this gauge to check the expected aPY
// on any given day. Multiple gaugeLockInfo objects will be associated with each LPPosition
message GaugeLockInfo {
  uint64 gaugeID = 1;
  bool isActive = 2;
  google.protobuf.Duration lockupDuration = 3 [
    (gogoproto.nullable) = false,
    (gogoproto.stdduration) = true,
    (gogoproto.jsontag) = "duration,omitempty",
    (gogoproto.moretags) = "yaml:\"duration\""
  ];
  string expectedApy = 4 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.moretags) = "yaml:\"apy\"",
    (gogoproto.nullable) = false
  ];
  google.protobuf.Timestamp startTime = 5 [
    (gogoproto.stdtime) = true,
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"startTime\""
  ];
}

enum LpState {
  INIT = 0;
  JOINING = 1;
  JOIN_FAILED = 2;
  JOINING_TIMEOUT = 3;
  EXITING = 4;
  EXIT_FAILED = 5;
  EXITING_TIMEOUT = 6;
  SETTLED = 7;
}
// LpPosition is used by the strategy during the the Lping activity. 
// Whenever orion module creates an LP position; an object of LpPosition will be created 
// for book keeping in the KV store.
message LpPosition {
  uint64 seqNo = 1;
  uint64 lpID = 2;
  uint64 lockID = 3;
  LpState state = 4;
  google.protobuf.Timestamp startTime = 5 [
    (gogoproto.stdtime) = true,
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"startTime\""
  ];
  uint64 bondingStartEpochDay = 6;
  uint64 bondDuration = 7;
  uint64 unbondingStartEpochDay = 8;
  uint64 unbondingDuration = 9;
  uint64 poolID = 10;
  cosmos.base.v1beta1.Coin lptoken = 11 [(gogoproto.nullable) = false];
  
  repeated cosmos.base.v1beta1.Coin coins = 12
  [(gogoproto.nullable) = false, (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins"];
  repeated GaugeLockInfo gaugelocks  = 13;
  
}
